--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,600;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;500;600&display=swap');
 
 html,
 body,
-#root {
-  font-family: "IBM Plex Sans", sans-serif;
+#root,
+.app {
+  font-family: "Rubik", sans-serif;
   margin: 0;
   box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  font-weight: 300;
 }
 
 .app {
@@ -25,3 +29,4 @@ body,
     margin: auto;
   }
 }
+
