added dark mode toggle switch

--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,25 @@ body,
 .app {
   padding: 0 0.5rem;
 }
+/* .hero-title h1 {
+  background: rgb(34,193,195);
+  background: linear-gradient(37deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+} */
 
 @media only screen and (min-width: 768px) {
   .container-wrapper {
     max-width: 90%;
     margin: auto;
+  }
+
+  .hero-title h1 {
+    font-size: 4rem;
+  }
+
+  .hero-title {
+    width: 90%;
   }
 }
 
@@ -28,5 +42,25 @@ body,
     max-width: 80%;
     margin: auto;
   }
+  .hero-title h1 {
+    font-size: 5rem;
+  }
+
+  .hero-title {
+    width: 90%;
+  }
 }
 
+@media only screen and (min-width: 1500px) {
+  .container-wrapper {
+    max-width: 75%;
+    margin: auto;
+  }
+  .hero-title h1 {
+    font-size: 6rem;
+  }
+
+  .hero-title {
+    width: 90%;
+  }
+}
